# textfabric2sql

./: .gitignore  CMakeLists.txt  README.md  abstractdatabaseadapter.cpp  abstractdatabaseadapter.h  main.cpp  mysqldatabaseadapter.cpp  mysqldatabaseadapter.h  reader.cpp  reader.h  sqlitedatabaseadapter.cpp  sqlitedatabaseadapter.h  textfabric2sql.cppcheck  tffile.cpp  tffile.h
