cmake_minimum_required(VERSION 3.14)

project(textfabric2sql LANGUAGES CXX)

set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Core)
find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Core Sql)

file(GLOB_RECURSE SOURCE_LIST "*.cpp")
file(GLOB_RECURSE HEADER_LIST "*.h")

add_executable(textfabric2sql
  ${SOURCE_LIST}
  ${HEADER_LIST}
)
target_link_libraries(textfabric2sql Qt${QT_VERSION_MAJOR}::Core Qt${QT_VERSION_MAJOR}::Sql)

install(TARGETS textfabric2sql
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)
